--- a/frontweb/package.json
+++ b/frontweb/package.json
@@ -10,6 +10,8 @@
     "@types/node": "^16.11.19",
     "@types/react": "17.0.0",
     "@types/react-dom": "17.0.0",
+    "bootstrap": "^5.1.3",
+    "node-sass": "4.14.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-scripts": "5.0.0",
